[package]
name = "dos-attack-tool"
version = "0.1.0"
edition = "2021"
authors = ["相田 優希 <51500566+aida0710@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = { version = "2.2.0", features = ["capture-stream"] }
pnet = { version = "0.35.0" }
crossbeam-channel = { version = "0.5.13" }
rayon = { version = "1.10.0" }
